--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
+  "proxy": "http://localhost:5000",
   "resolutions": {
     "styled-components": "^5"
   },
